# liboat

./: .gitignore  CMakeLists.txt  Makefile  README  abc2wav.cpp  abcplay.cpp  aicone.cpp  animk.cpp  correct.cpp  edfont.cpp  edsnd.cpp  gramk.cpp  mkbg.cpp  mkptrn.cpp  mkqbf.cpp  oat.cpp  oat.hpp  oat_box.cpp  oat_button.cpp  oat_button.hpp  oat_checkform.cpp  oat_checkform.hpp  oat_container.cpp  oat_cross.hpp  oat_dial.cpp  oat_font.cpp  oat_font.hpp  oat_icon.hpp  oat_iconmodule.hpp  oat_image.cpp  oat_image_directcolor.cpp  oat_image_indexcolor.cpp  oat_imagemodule.hpp  oat_master.cpp  oat_master.hpp  oat_mouse.hpp  oat_notebook.cpp  oat_notebook.hpp  oat_point.hpp  oat_table.hpp  (+12 more)
core/: oat.hpp  oat_arraymodule.hpp  oat_box.hpp  oat_button.cpp  oat_buttonmodule.cpp  oat_buttonmodule.hpp  oat_checkform.cpp  oat_color.cpp  oat_color.hpp  oat_container.cpp  oat_container.hpp  oat_cross.cpp  oat_dial.hpp  oat_font.cpp  oat_icon.cpp  oat_iconmodule.cpp  oat_image.hpp  oat_master.cpp  oat_notebook.hpp  oat_table.cpp  oat_textbox.cpp  oat_textbox.hpp  oat_widget.cpp  oat_widget_render.cpp
fcfont/: Makefile  README  characters-base.txt  characters.txt  combineds-base.txt  combineds.txt  fcfont.cpp  fcfont.hpp  fcfont_charactereditor.cpp  fcfont_charactereditor.hpp  fcfont_characterselector.cpp  fcfont_characterselector.hpp  fcfont_combinedselector.cpp  fcfont_combinedselector.hpp  fcfont_editor.cpp  fcfont_editor.hpp  fcfont_sample.cpp  fcfont_sample.hpp  restore.cpp
gramk/: README  gramk.hpp  gramk_album.cpp  gramk_album.hpp  gramk_album__create_operator_widget.cpp  gramk_album__file.cpp  gramk_anibox.cpp  gramk_anibox.hpp  gramk_card.cpp  gramk_card.hpp  gramk_card__draw.cpp  gramk_card__fill_area.cpp  gramk_card__log.cpp  gramk_card__operate.cpp  gramk_clip.hpp  gramk_drawing.cpp  gramk_drawing.hpp  gramk_packet.hpp  gramk_painter.cpp  gramk_painter.hpp  gramk_painter__create_mode_widget.cpp  gramk_painter__create_oper_widget.cpp  gramk_painter__create_palette_widget.cpp  gramk_painter__move_corner.cpp  gramk_pathholder.cpp  gramk_pathholder.hpp  gramk_rect.cpp  gramk_rect.hpp  gramk_supercard.cpp  gramk_supercard__shift.cpp
libaicone/: Makefile  aicone_canvas.cpp  aicone_canvas.hpp  aicone_canvas_draw.cpp  aicone_canvas_draw_line.cpp  aicone_canvas_fill_area.cpp  aicone_canvas_transform.cpp
libgramk/: Makefile  gramk.hpp  gramk_album.cpp  gramk_album.hpp  gramk_album__file.cpp  gramk_anibox.cpp  gramk_anibox.hpp  gramk_card.cpp  gramk_card.hpp  gramk_card__fill_area.cpp  gramk_card__shift.cpp  gramk_clip.cpp  gramk_clip.hpp  gramk_drawing.cpp  gramk_drawing.hpp  gramk_painter.cpp  gramk_painter.hpp  gramk_painter__create_oper_widget.cpp  gramk_painter__draw_line.cpp  gramk_painter__move_corner.cpp  gramk_supercard.cpp  gramk_supercard.hpp  gramk_supercard__fill_area.cpp
libmg/: Makefile  mg_animationdisplay.cpp  mg_animationdisplay.hpp  mg_area_selection.cpp  mg_area_selection.hpp  mg_board.hpp  mg_board__data.cpp  mg_board__operate.cpp  mg_board__widget.cpp  mg_canvas.cpp  mg_canvas.hpp  mg_color_selection.cpp  mg_color_selection.hpp  mg_colorselector.cpp  mg_colorselector.hpp  mg_core.cpp  mg_core.hpp  mg_core__edit.cpp  mg_core__selection.cpp  mg_framepositioner.cpp  mg_framepositioner.hpp  mg_image.cpp  mg_image.hpp  mg_image__edit.cpp  mg_image__undo.cpp  mg_image__widget.cpp  mg_message.cpp  mg_message.hpp  mg_motionselector.cpp  mg_motionselector.hpp  mg_patterndisplay.cpp  mg_patterndisplay.hpp  mg_patterntable.cpp  mg_patterntable.hpp  mg_tool_selection.cpp  mg_tool_selection.hpp  mg_widget.hpp  mg_widget__edit.cpp  mg_widget__manager.cpp  mg_widget__tool.cpp
libmkqbf/: Makefile  mkqbf_chippointer.cpp  mkqbf_chippointer.hpp  mkqbf_core.cpp  mkqbf_core.hpp  mkqbf_editor.cpp  mkqbf_editor.hpp  mkqbf_widget.hpp  mkqbf_widget__manager.cpp
pwg/: Makefile  README  pwg_box.cpp  pwg_box.hpp  pwg_device.cpp  pwg_device.hpp  pwg_frequency_table.cpp  pwg_noisedevice.cpp  pwg_noisedevice.hpp  pwg_wave.cpp  pwg_wave.hpp  pwg_wavedevice.cpp  pwg_wavedevice.hpp
pwg_widget/: Makefile  pwg_keyboard.cpp  pwg_keyboard.hpp  pwg_keyrow.cpp  pwg_keyrow.hpp  pwg_monitor.cpp  pwg_monitor.hpp
